# vscode_template

./: CMakeLists.txt  CMakePresets.json  README.txt
cmake/: Preset.cmake
template/: CMakeLists.txt
